# opero-core

./: .gitignore  README.md  install.sh  pyproject.toml
opero/: __init__.py
opero/agents/: prompts.py  registry.py
opero/cli/: main.py
opero/core/: engine.py  events.py  features.py  memory.py  models.py  projects.py  tasks.py
opero/daemon/: watcher.py
opero/db/: schema.py
opero/git_integration/: git_ops.py
opero/integrations/: claude_code.py
opero/mcp/: server.py  stdio_server.py
opero/mcp/static/: index.html
opero/orchestrator/: interactive.py  loop.py  run_loop.py
opero/services/: manager.py  scaffold.py
