[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opero-core"
version = "0.1.0"
description = "The operating system for AI-driven software development"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
]

[project.scripts]
opero = "opero.cli.main:main"

[tool.setuptools.packages.find]
include = ["opero*"]
