[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opero-core"
version = "0.1.0"
description = "The operating system for AI-driven software development"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.135.2",
    "uvicorn[standard]==0.42.0",
    "pydantic==2.12.5",
    "starlette==1.0.0",
    "mcp>=1.26.0",
]

[project.scripts]
opero = "opero.cli.main:main"

[tool.setuptools.packages.find]
include = ["opero*"]

[tool.setuptools.package-data]
"opero.mcp" = ["static/**/*"]
